# touring

./: .gitignore  API_SUMMARY.md  Cargo.toml  README.md  TODO.md  touring.code-workspace
migrations/: 0001_init.sql  0002_series_prefs.sql  0002_series_sources_unique.sql  0004_streams_unique.sql  0005_chapter_progress.sql  0006_unit_group.sql  0006_unit_groups.sql
plugin-interface/: Cargo.toml  Makefile  README.md
plugin-interface/src/: guest.rs  lib.rs  library.rs  source.rs
plugin-interface/wit/: world.wit
src/: aggregator.rs  api.rs  cli.rs  dao.rs  data.rs  db.rs  lib.rs  main.rs  mapping.rs  plugins.rs  source.rs  storage.rs  types.rs  wasmsource.rs
src/config/: example.json  example.yaml
src/plugins/: config.rs  host.rs  plugin.rs
touring-bridge/: Cargo.toml
touring-bridge/src/: lib.rs
wit/: Makefile  source.wit  world.wit
