[workspace]
members = [".", "plugin-interface"]

[package]
name = "touring"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "28.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "28.0.0" }
wasmtime-wasi-http = { version = "28.0.0" }
wit-bindgen = "0.45"
wit-component = "0.238"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
plugin-interface = { path = "plugin-interface", features = ["host"] }
# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "migrate", "tls-native-tls", "any", "sqlite", "postgres", "mysql"] }
directories = "5"
url = "2"

[build-dependencies]
wit-bindgen = "0.45"
