[workspace]
members = [".", "plugin-interface"]

[package]
name = "touring"
version = "0.1.0"
edition = "2021"
description = "A media aggregation library with plugin support via WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/5EUS/touring"
homepage = "https://github.com/5EUS/touring"
documentation = "https://docs.rs/touring"
readme = "README.md"
keywords = ["media", "manga", "anime", "webassembly", "plugins"]
categories = ["multimedia", "web-programming", "wasm"]

# Exclude build artifacts and temporary files
exclude = [
    "target/",
    "plugins/*.wasm",
    ".git/",
    ".DS_Store"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "36.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "36.0.0" }
wasmtime-wasi-http = { version = "36.0.0" }
wit-bindgen = "0.45"
wit-component = "0.238"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
plugin-interface = { path = "plugin-interface", package = "touring-plugin-interface", features = ["host"] }
# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "migrate", "tls-native-tls", "any", "sqlite", "postgres", "mysql"] }
directories = "5"
url = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
# Downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
percent-encoding = "2"

[build-dependencies]
wit-bindgen = "0.45"
