[package]
name = "touring-plugin-interface"
version = "0.1.0"
edition = "2021"
description = "Plugin interface for the touring media aggregation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/5EUS/touring"
homepage = "https://github.com/5EUS/touring"
documentation = "https://docs.rs/touring-plugin-interface"
keywords = ["webassembly", "plugins", "interface", "media"]
categories = ["web-programming", "wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wit-bindgen = "0.45.0"

[features]
default = []
host = []
guest = []

[lib]
name = "plugin_interface"
path = "src/library.rs"
