[package]
name = "touring-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = { version = "2", features = ["chrono", "uuid"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Depend on the core library crate
# When publishing or separating crates, use path = "../touring"
touring = { path = ".." }

[build-dependencies]
flutter_rust_bridge_codegen = "2"
